[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Joe_Walk.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Joe_Jump.png" type="Texture" id=3]
[ext_resource path="res://Sounds/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/step.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/dash.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/gunshot2.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Player/Joe_Shoot.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Run - Joe",
"speed": 3.0
}, {
"frames": [ null, null, null, null, null, null ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ null ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 12.8806

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Joe_Jump"

[sub_resource type="Animation" id=5]
resource_name = "Joe_Walk"
length = 0.65
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Joe_Jump"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=7]

[sub_resource type="CapsuleShape2D" id=8]
radius = 15.0699
height = 11.2762

[sub_resource type="Animation" id=9]
resource_name = "Shoot"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7.47187, 10.4048 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 2.37827, -0.475651 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
animation = "Idle"
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D_Walk" type="CollisionShape2D" parent="."]
position = Vector2( -5.70784, -5.08611 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite_Walk" type="Sprite" parent="."]
position = Vector2( 0, -0.220062 )
scale = Vector2( 1, 0.993123 )
texture = ExtResource( 2 )
flip_h = true
hframes = 4
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite_Walk"]
anims/Idle = SubResource( 3 )
anims/Joe_Jump = SubResource( 4 )
anims/Joe_Walk = SubResource( 5 )

[node name="Sprite_Jump" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 9
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite_Jump"]
anims/Joe_Jump = SubResource( 6 )

[node name="CollisionShape2D_Walk2" type="CollisionShape2D" parent="."]
position = Vector2( -6.42132, 13.0805 )
rotation = 1.5708
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D_Jump1" type="CollisionShape2D" parent="."]
position = Vector2( -2.15701, 1.01614 )
rotation = -0.261799
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="StepSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="GunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.18

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Sprite_Shoot" type="Sprite" parent="."]
texture = ExtResource( 8 )
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite_Shoot"]
anims/Shoot = SubResource( 9 )

[node name="shot_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="sprint_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="wall_collide_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_collide_area"]
position = Vector2( 10.0113, 5.74484 )
shape = SubResource( 10 )
[connection signal="timeout" from="ghost_timer" to="." method="_on_ghost_timer_timeout"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="body_entered" from="wall_collide_area" to="." method="_on_wall_collide_area_body_entered"]
